[metadata]
name = django-categories
description = A way to handle one or more hierarchical category trees in django.
long_description = file:README.md
long_description_content_type = "text/markdown"
author = Corey Oordt
author_email = coreyoordt@gmail.com
url = http://github.com/jazzband/django-categories
classifiers =
    Framework :: Django

[options]
zip_safe=False
include_package_data=True

[options.packages.find]
exclude =
    example*
    docs
    build
include = categories

[flake8]
ignore = D203,W503,E501
exclude =
    .git
    .tox
    docs
    build
    dist
    doc_src
max-line-length = 119

[darglint]
ignore=DAR402

[bdist_wheel]
universal = 1
