[metadata]
name = django-categories
version = 1.8.0
description = A way to handle one or more hierarchical category trees in django.
long_description = file:README.md
long_description_content_type = "text/markdown"
author = Corey Oordt
author_email = coreyoordt@gmail.com
url = http://github.com/jazzband/django-categories
classifiers =
    Framework :: Django

[options]
zip_safe=False
include_package_data=True
packages = find:

[options.packages.find]
exclude =
    example*
    docs
    build
include =
    categories
    categories.*

[flake8]
ignore = D203,W503,E501
exclude =
    .git
    .tox
    docs
    build
    dist
    doc_src
max-line-length = 119

[darglint]
ignore=DAR402

[bdist_wheel]
universal = 1

[bumpversion]
current_version = 1.8.0
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\+\w+-(?P<dev>\d+))?
serialize =
	{major}.{minor}.{patch}+{$USER}-{dev}
	{major}.{minor}.{patch}
message = Version updated from {current_version} to {new_version}

[bumpversion:part:dev]

[bumpversion:file:setup.cfg]

[bumpversion:file:categories/__init__.py]

[bumpversion:file:CHANGELOG.md]
search = Unreleased
