[bumpversion]
current_version = 1.9.0
commit = True
commit_args = --no-verify
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\+\w+-(?P<dev>\d+))?
serialize =
	{major}.{minor}.{patch}+{$BRANCH_NAME}-{dev}
	{major}.{minor}.{patch}
message = Version updated from {current_version} to {new_version}

[metadata]
name = django-categories
version = attr:categories.__version__
description = A way to handle one or more hierarchical category trees in django.
long_description = file:README.md
long_description_content_type = text/markdown
author = Corey Oordt
author_email = coreyoordt@gmail.com
url = http://github.com/jazzband/django-categories
classifiers =
	Framework :: Django

[options]
zip_safe = False
include_package_data = True

[options.packages.find]
exclude =
	example*
	docs
	build
include = categories

[flake8]
ignore = D203,W503,E501
exclude =
	.git
	.tox
	docs
	build
	dist
	doc_src
max-line-length = 119

[darglint]
ignore = DAR402

[bdist_wheel]
universal = 1

[bumpversion:part:dev]

[bumpversion:file:setup.cfg]

[bumpversion:file:categories/__init__.py]

[bumpversion:file(version heading):CHANGELOG.md]
search = Unreleased

[bumpversion:file(diff link):CHANGELOG.md]
search = {current_version}...HEAD
replace = {current_version}...{new_version}
